--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <p>Last updated October 3, 2020</p>
   </div>
   <div className="data">
+    <h2>Number of Calls</h2>
     <div id="barChart"></div>
+    <h2>Call Types</h2>
     <div id="pieChart"></div>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="visualize/callsPerMonth.js"></script>
   <script src="visualize/callsPerType.js"></script>
+  <script src="visualize/analyzeData.js"></script>
 </body>
 </html>
