--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div className="info">
+
+  <div class="info">
     <h1>Call for Service 2020</h1>
     <p><a href="https://data.nola.gov/Public-Safety-and-Preparedness/Call-for-Service-2020/hp7u-i9hf">Link to data set</a></p>
     <p>Last updated October 3, 2020</p>
   </div>
-  <div className="data">
+  <div class="data">
     <h2>Number of Calls</h2>
     <div id="barChart"></div>
     <h2>Call Types</h2>
     <div id="pieChart"></div>
+  </div>
+  <div class="loading">
+    <h1>Loading data</h1>
+    <p>This might take a while...</p>
   </div>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="visualize/callsPerMonth.js"></script>
