--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
     <div id="barChart"></div>
     <h2>Call Types</h2>
     <div id="pieChart"></div>
+    <h2>Crime Reports on a Map</h2>
+    <div id="map"></div>
   </div>
+
   <div class="loading">
     <h1>Loading data</h1>
     <p>This might take a while...</p>
   </div>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <script src="https://d3js.org/d3-zoom.v2.min.js"></script>
+  <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
   <script src="visualize/callsPerMonth.js"></script>
   <script src="visualize/callsPerType.js"></script>
+  <script src="visualize/geo.js"></script>
   <script src="visualize/analyzeData.js"></script>
 </body>
 </html>
